--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section>
         <div>
             <div class="col-12 col-md-12 col-lg-12">
-                <img src="img/bgsalt.webp" alt="" class="img-fluid img-resize image-01 responsive-img ">
+                <img src="img/bgsalt.webp" alt="" class="img-fluid  image-01 responsive-img ">
             </div>
 
             <div>
